@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0


class GreenSpace {
    + registerGreenSpace(name, location, area)
}

class GreenSpaceRepository {
    + registerGreenSpace(name, location, area, address)
    + validateGreenSpace(greenSpace)
    + saveGreenSpace(greenSpace)
    + getGreenSpaceTypeList()

}

class Repositories {
    + getInstance()
    + getGreenSpaceTypeRepository()
    + getGreenSpaceRepository()

}


class RegisterGreenSpaceController {
    + getGreenSpaceTypeList()
    + registerGreenSpace(name, location, area, address)

}

class RegisterGreenSpaceUI {
}


RegisterGreenSpaceUI .right.> RegisterGreenSpaceController
RegisterGreenSpaceController ..> GreenSpaceRepository
RegisterGreenSpaceController ..> Repositories
GreenSpaceRepository ..> GreenSpace




@enduml